export class Negocio {
  id:number = -1;
  nombre:string = "";
  rfc:string = "";
  direccion:string = "";
  telefono:string = "";
  logo_path:string = "";
}
