export class Usuario {
  userName:string = "";
  password:string = "";
  rol:string = "";
  activo:Boolean = true;
}
